tests/baselines/reference/logicalNotOperatorInvalidOperations.errors.txt
==== tests/cases/conformance/expressions/unaryOperators/logicalNotOperator/logicalNotOperatorInvalidOperations.ts (4 errors) ====
    // Unary operator !
    var b: number;
    
    // operand before !
    var BOOLEAN1 = b!;  //expect error
                    ~
!!! error TS1005: ',' expected.
                     ~
!!! error TS1109: Expression expected.
    
    // miss parentheses
    var BOOLEAN2 = !b + b;
                   ~~~~~~
!!! error TS2365: Operator '+' cannot be applied to types 'boolean' and 'number'.
    
    // miss an operand
    var BOOLEAN3 =!;
                   ~
!!! error TS1109: Expression expected.